--- a/src/scripts/styles.css
+++ b/src/scripts/styles.css
@@ -155,6 +155,7 @@ h6 {
   margin-left: 30px;
   border-radius: 50px;
   color: #fff;
+  text-decoration: none;
 }
 
 .navbar .getstarted:hover {
@@ -368,6 +369,7 @@ h6 {
   transition: 0.5s;
   color: #14279b;
   border: 2px solid #14279b;
+  text-decoration: none;
 }
 
 #hero .btn-get-started:hover {
@@ -654,6 +656,7 @@ input:checked+.slider:before {
   animation-delay: 0.8s;
   margin-top: 6px;
   border: 2px solid #14279b;
+  text-decoration: none;
 }
 
 .about .content .btn-learn-more:hover {
