--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -706,13 +706,13 @@ import "glightbox/dist/css/glightbox.min.css"
     >
     <script>
       import "../scripts/main.js";
-      // import "bootstrap/dist/js/bootstrap.bundle.min.js";
+      import "bootstrap/dist/js/bootstrap.bundle.min.js";
       import "aos/dist/aos.js";
       import "glightbox/dist/js/glightbox.js";
       import "jquery/dist/jquery.min.js"
       import "swiper/swiper-bundle.js";
-      import "../scripts/purecounter.js";
     </script>
+    <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
   </body>
