--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,21 +1,22 @@
 ---
 import Layout from "../layouts/Layout.astro";
 import "../scripts/styles.css";
-import "bootstrap/dist/css/bootstrap.min.css";
-import "swiper/swiper-bundle.min.css";
-// import "aos/dist/aos.css"
-import "remixicon/fonts/remixicon.css";
-import "boxicons/css/boxicons.min.css";
-import "bootstrap-icons/font/bootstrap-icons.css"
-import "glightbox/dist/css/glightbox.min.css"
 ---
 
 <Layout title="Akeshya">
   <head>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-B1R5LB296V"></script>  
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet">
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-B1R5LB296V"></script>  
   </head>
   <body
-    data-aos-easing="ease-in-out"
+    data-aos-easing="ease-in-quad"
     data-aos-duration="1000"
     data-aos-delay="0"
   >
@@ -706,14 +707,13 @@ import "glightbox/dist/css/glightbox.min.css"
     >
     <script>
       import "../scripts/main.js";
-      import "bootstrap/dist/js/bootstrap.bundle.min.js";
-      import "aos/dist/aos.js";
-      import "glightbox/dist/js/glightbox.js";
-      import "jquery/dist/jquery.min.js"
-      import "swiper/swiper-bundle.js";
     </script>
     <script src="https://cdn.jsdelivr.net/npm/@srexi/purecounterjs/dist/purecounter_vanilla.js"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/boxicons@2.1.3/dist/boxicons.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
   </body>
 </Layout>
