--- a/src/scripts/styles.css
+++ b/src/scripts/styles.css
@@ -161,6 +161,7 @@ h6 {
 .navbar .getstarted:hover {
   color: #fff;
   background: #4aa3df;
+  text-decoration: none;
 }
 
 .navbar .dropdown ul {
@@ -231,7 +232,7 @@ h6 {
 * Mobile Navigation 
 */
 .mobile-nav-toggle {
-  color: #222222;
+  color: #000000;
   font-size: 28px;
   cursor: pointer;
   display: none;
@@ -239,8 +240,8 @@ h6 {
   transition: 0.5s;
 }
 
-.mobile-nav-toggle.bi-x {
-  color: #fff;
+.bi-colour {
+  color: #fdfdfd;
 }
 
 @media (max-width: 991px) {
@@ -296,9 +297,20 @@ h6 {
 .navbar-mobile li:hover>a {
   color: #14279b;
 }
+.navbar-mobile .getstarted:hover {
+  color: #fff;
+  background: #4aa3df;
+  text-decoration: none;
+}
 
 .navbar-mobile .getstarted {
+  background: #14279b;
+  padding: 8px 25px;
+  margin-left: 60px;
+  border-radius: 50px;
   margin: 15px;
+  color: #fff;
+  text-decoration: none;
 }
 
 .navbar-mobile .dropdown ul {
