--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,9 +15,40 @@ const { title } = Astro.props;
 		<link rel="icon" href="/favicon2.png" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+		<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
+		<!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet">
+		<link href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" rel="stylesheet">
+		<script src="https://www.googletagmanager.com/gtag/js?id=G-B1R5LB296V"></script>  
 	</head>
 	<body>
 		<slot />
+		<footer id="footer">
+			<div class="container">
+			  <div class="d-flex justify-content-between">
+				<div class="Copyright">
+				  © Copyright <strong>Akeshya</strong>. All Rights Reserved
+				</div>
+				<div>
+				  <ul class="d-flex list-unstyled">
+					<li class="px-3">
+					  <a href="./Terms and conditions.pdf" style="text-decoration: none;">Terms and conditions</a>
+					</li>
+					<li class="px-3">
+					  <a href="./Refund policy.pdf" style="text-decoration: none;">Refund policy</a>
+					</li>
+					<li class="px-3">
+					  <a href="./Privacy policy.pdf" style="text-decoration: none;">Privacy policy</a>
+					</li>
+				  </ul>
+				</div>
+			  </div>
+			</div>
+		  </footer>
 	</body>
 </html>
 <style is:global>
